Se agregó la búsqueda por grupo taxonómico
Se agrego la busqueda por grupo taxonomico, asi como la agregacion
de subgrupos de un grupo taxonomico dado.
